tests/NormalTests/paczka1/fuzzy1/59440548.err
Error in line 10: K117 A335 5,2
Error in line 12: UTCayzU A671 48,5
Error in line 24: UTCayzU A190 25,6
Error in line 32: ipTs1 A190 2%5,1
Error in line 34: BZCnrNU A190 80,1
Error in line 26: UTCayzU A335 35,2
